--- a/JavaScriptPractice/LunarLander/stylesheet.css
+++ b/JavaScriptPractice/LunarLander/stylesheet.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #main {
     display: flex;
     position: relative;
@@ -8,6 +12,7 @@
     background-color: rgb(58, 56, 56);
     color: chartreuse;
     display: inline-block;
+    border: 2px solid black;
 }
 
 .display {
@@ -22,6 +27,25 @@
     border-radius: 10px;
     background-color: rgb(29, 29, 29);
     
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    width: 1500px;
+    background-color: rgb(58, 56, 56);
+    border: 2px solid black;
+}
+
+.manual {
+    max-width: 500px;
+    min-width: 100px;
+    color:cadetblue;
+    border: 2px solid green;
+    margin: 5px;
+    border-radius: 10px;
+    background-color: rgb(29, 29, 29);
+    padding: 10px;
 }
 
 .sprites {
